# SnakeB23IMT

./: AUTHORS  CMakeLists.txt  README  README.md
src/: const.h  includes.h  main.c
src/Game/: gameManager.c  gameManager.h
src/Game/Input/: inputHandler.c  inputHandler.h
src/Game/Input/States/: gameInputHandler.c  gameInputHandler.h  mainMenuInputHandler.c  mainMenuInputHandler.h
src/Game/Logic/: gameLogic.c  gameLogic.h  gameLoop.c  gameLoop.h
src/Game/Logic/States/: inGameLogic.c  inGameLogic.h  loadingLogic.c  loadingLogic.h  mainMenuLogic.c  mainMenuLogic.h
src/Graphics/: guiManager.c  guiManager.h
src/Graphics/Renderer/: fontManager.c  fontManager.h  gameRender.c  gameRender.h
src/Graphics/Renderer/Sprites/: Background.c  Background.h  Sprite.c  Sprite.h
src/Graphics/Renderer/States/: inGameRenderer.c  inGameRenderer.h  loadingRenderer.c  loadingRenderer.h  mainMenuRenderer.c  mainMenuRenderer.h
src/Objects/: GameObject.h  Point.h
